# task-cli

./: Cargo.toml  README.md
src/: data.json  lib.rs  main.rs
src/commands/: args.rs  mod.rs  task.rs
src/table/: mod.rs  queries.rs  table.rs  test.rs
